# IOMath

./: .gitignore  .travis.yml  README.md
include/IOMath/: Geometric.hpp  IOMath.hpp  Matrices.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  MatrixFunctions.hpp  Quaternion.hpp  QuaternionFunctions.hpp  Trigonometric.hpp  Vector2.hpp  Vector3.hpp  Vectors.hpp
include/IOMath/detail/: ComputeBasicMatrixFunctions.hpp  ComputeBasicQuaternionFunctions.hpp  ComputeGeometric.hpp  ComputeMatrixFunctions.hpp  ComputeMatrixTransform.hpp  ComputeQuaternionEquations.hpp  ComputeQuaternionGeometric.hpp  ComputeTrigonometric.hpp
src/: Geometric.hpp  Matrices.hpp  Matrix2.hpp  Matrix3.hpp  Matrix4.hpp  MatrixFunctions.hpp  Quaternions.hpp  Trigonometric.hpp  Vector4.hpp  Vectors.hpp
src/detail/: ComputeBasicMatrixFunctions.hpp  ComputeBasicQuaternionFunctions.hpp  ComputeMatrixTransform.hpp  ComputeQuaternionEquations.hpp  ComputeQuaternionTransform.hpp  ComputeVectorGeometric.hpp
src/pointers/: MatrixPointer.hpp  QuaternionPointer.hpp  VectorPointer.hpp
src/ptr/: MakeFromPointer.hpp  MatrixPointer.hpp  QuaternionPointer.hpp  VectorPointer.hpp
src/types/: BasicTypes.hpp
tests/: CMakeLists.txt  TDVector2.cpp  TDVector3.cpp  TDVector4.cpp  TFVector2.cpp  TFVector3.cpp  TFVector4.cpp  TIVector2.cpp  TIVector3.cpp  TIVector4.cpp  TUVector2.cpp  TUVector3.cpp  TUVector4.cpp  TestAll.sh  TestDVectors.sh  TestFVectors.sh  TestIVectors.sh  TestUVectors.sh  TestVector2.cpp  TestVector3.cpp  VectorAsserts.hpp
tests/internal/: PrintTVector2.hpp  PrintTVector3.hpp  PrintTVector4.hpp
(+119 files in other folders)
